--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,15 @@ server:
 spring:
   application:
     name: mdm
+  datasource:
+    url: jdbc:postgresql://localhost:5433/mentoring
+    username: dev
+    password: Ab123456
+    hikari:
+      schema: mdm
+      connection-init-sql: CREATE SCHEMA IF NOT EXISTS ${spring.datasource.hikari.schema};
+  liquibase:
+    change-log: ./db/changelog/changelog-master.yml
+  jpa:
+    hibernate:
+      ddl-auto: validate
