--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,20 @@ repositories {
     mavenCentral()
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.2"
+    }
+}
+
 dependencies {
     implementation "org.springframework.boot:spring-boot-starter-web"
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springframework.boot:spring-boot-starter-data-jpa"
+    implementation "org.springframework.retry:spring-retry"
     implementation "org.springframework.kafka:spring-kafka"
+
+    implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
 
     implementation "org.liquibase:liquibase-core"
     implementation "org.postgresql:postgresql:42.7.4"
@@ -27,6 +36,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
     testImplementation "org.springframework.boot:spring-boot-starter-test"
+    testImplementation "org.springframework.cloud:spring-cloud-contract-wiremock"
 }
 
 test {
