hw19 исправлены замечания вынесены значения параметров в application.yml; добавлен retryable во второй feign клиент; переименовано тело события из кафки; добавлена валидация события из кафки

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,8 @@ spring:
             read-timeout: 5000
 
 mdm:
+  system-id: mdm-prusakova
+  sender: prusakova
   kafka:
     mdm-change-phone:
       enabled: true
@@ -41,3 +43,6 @@ mdm:
     change-phone:
       host-one: http://localhost:8082
       host-two: http://localhost:8082
+  retry:
+    max-attempts: 2
+    backoff: 1000
